--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-10">
-        <app-shopping-edit></app-shopping-edit>
+        <app-shopping-edit (outIngreds) = "onIngredientAdded($event)"></app-shopping-edit>
         <hr>
         <ul class="list-group">
             <a class="list-group-item"
@@ -9,4 +9,4 @@
              >{{ ingredient.name }} ({{ ingredient.amount }})</a>
         </ul>
     </div>
-</div>
+</div>  
