--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-header (featuerSelected)="onNavigate($event)"></app-header>
+<!-- <app-header (featuerSelected)="onNavigate($event)"></app-header> -->
+<app-header></app-header>
 <div class="container">
     <div class="row">
         <div class="col-md-12">
